fix(selling-items): Fix layout issues
Resolved layout issues in the selling items page to ensure proper alignment and display of content

--- a/client/src/pages/marketplace/HubMarketNavbar.scss
+++ b/client/src/pages/marketplace/HubMarketNavbar.scss
@@ -3,7 +3,7 @@
   --fnt-reg: black;
   --fnt-hover: #8e47ff;
 }
-.container{
+.container-nav{
   width:100%;
   height: 25%;
 }
