--- a/client/src/pages/selling-item/SellingItems.scss
+++ b/client/src/pages/selling-item/SellingItems.scss
@@ -4,8 +4,9 @@
   width: 40%;
   display: flex;
   justify-content: center;
-  padding: 50px;
+  padding-top: 10%;
 }
+
 .col-info-color{
   width: 60%;
   border: 5px solid #000000;
@@ -20,13 +21,6 @@
     padding: 10px;
     margin: 0;
   }
-  //.container-size{
-  //   width: 100% !important;
-  //   height: 100% !important;
-  //   //border: 4px solid red;
-  //   overflow:hidden;
-  // }
-
 }
 @media (max-width: 400px) {
   .col-length{
@@ -85,4 +79,9 @@
 .post-img {
   width: 100%;
   height: auto;
+}
+.contain-image{
+  max-width: 60%;
+  max-height: 70%;
+  overflow: hidden;
 }
